<resources>
    <string name="app_name">Regeneration Oil</string>
    <string name="auth_title">Авторизация в системе</string>
    <string name="auth_login">Логин</string>
    <string name="auth_pass">Пароль</string>
    <string name="auth_enter">Войти</string>

    <string name="par_title">Параметры запуска</string>
    <string name="par_oilType">Тип масла</string>
    <string name="par_tf">Трансформаторное</string>
    <string name="par_tb">Турбинное</string>
    <string name="par_gd">Гидравлическое</string>


    <string name="par_workType">Цикл работы</string>
    <string name="par_cl">Только очистка</string>
    <string name="par_clReg">Очистка и регенерация</string>

    <string name="par_oilVolume">Объем масла (тонны):</string>
    <string name="par_initialClean">Начальный класс чистоты:</string>
    <string name="par_waterContent">Содержание воды (%):</string>
    <string name="par_gasContent">Содержание газа (%):</string>

    <string name="par_acidity">Кислотность:</string>
    <string name="par_dielectricLoss">tg угла диэлектрических потерь:</string>
    <string name="par_breakdownVoltage">Пробойное напряжение:</string>

    <string name="par_start">Запустить</string>



    <string name="work_fil_title">Фильтрация</string>
    <string name="work_fil_base">Исходный к.ч.:</string>
    <string name="work_fil_target">Необх. к.ч.:</string>
    <string name="work_fil_current">Текущий к.ч.:</string>

    <string name="work_dry_title">Осушка</string>
    <string name="work_dry_base">Исх. % воды:</string>
    <string name="work_dry_target">Необходимый %:</string>
    <string name="work_dry_current">Текущий %:</string>

    <string name="work_dg_title">Дегазация</string>
    <string name="work_dg_base">Исх. % газа:</string>
    <string name="work_dg_target">Необходимый %:</string>
    <string name="work_dg_current">Текущий %:</string>

    <string name="work_reg_title">Регенерация</string>
    <string name="work_reg_base">Ac:</string>
    <string name="work_reg_target">Tg:</string>
    <string name="work_reg_current">Uп:</string>

    <string name="work_add_title">Присадки</string>
    <string name="work_add_current">Введено:</string>
    <string name="work_add_target">Требуется:</string>

    <string name="work_status_wait">Ожидание</string>
    <string name="work_status_run">В процессе</string>
    <string name="work_baseValue">0</string>


</resources>