<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/oilTypeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/par_title"
            android:textSize="35sp"
            android:textColor="#707070"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="15dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="103dp"
            >

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/oilTypeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/par_oilType"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/oilTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/transformerRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_tf" />

                    <RadioButton
                        android:id="@+id/turbineRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_tb" />

                    <RadioButton
                        android:id="@+id/hydraulicRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_gd" />

                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/workTypeLinearLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="103dp"
                >
                <TextView
                    android:id="@+id/operationCycleTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_workType"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <RadioGroup
                    android:id="@+id/operationCycleRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cleaningRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_cl" />

                    <RadioButton
                        android:id="@+id/cleaningAndRegenerationRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_clReg" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginStart="108dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_oilVolume"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/oilVolumeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_initialClean"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/initialCleanlinessEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_waterContent"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/waterContentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_gasContent"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/gasContentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="48dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_acidity"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/acidityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_dielectricLoss"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                         />

                    <EditText
                        android:id="@+id/dielectricLossEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/par_breakdownVoltage"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        />

                    <EditText
                        android:id="@+id/breakdownVoltageEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"

            android:orientation="horizontal"
            android:gravity="center_horizontal">
        <Button
            android:id="@+id/startButton"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:text="@string/par_start"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_rounded_background"
            android:textSize="12sp"
            android:layout_below="@id/passwordEditText"
            android:layout_centerHorizontal="true"

             />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
