<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        android:textSize="35sp"
        android:textColor="#707070"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_login"
        android:textColorHint="#707070"
        android:inputType="text"
        android:background="@drawable/edittext_rounded_border"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_pass"
        android:textColorHint="#707070"
        android:inputType="textPassword"
        android:background="@drawable/edittext_rounded_border"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="260dp"
        android:layout_height="34dp"
        android:text="@string/auth_enter"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_rounded_background"
        android:textSize="12sp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

</RelativeLayout>
